--- a/Research.html
+++ b/Research.html
@@ -712,25 +712,10 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           lang="EN-US"><font
                                                           size="-1"><span
 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                                          lang="EN-US">A.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                                                          lang="EN-US">A. 
                                                           Conca, E. De
                                                           Negri, M. E.
-                                                          Rossi, &nbsp;
+                                                          Rossi,  
                                                           <a href="http://arxiv.org/pdf/0705.3767.pdf">  
                                                           Contracted
                                                           ideals and the
@@ -800,26 +785,11 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           lang="EN-US"><font
                                                           size="-1"><span
 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                                          lang="EN-US">M.E.&nbsp;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                                                          lang="EN-US">M.E.&nbsp; 
                                                           Rossi, N.V.
                                                           Trung, G.
                                                           Valla,&nbsp; <a
-href= href="http://arxiv.org/pdf/0407398/pdf"> Castelnuovo-Mumford regularity and
+href="http://arxiv.org/pdf/0407398.pdf"> Castelnuovo-Mumford regularity and
                                                           finiteness of
                                                           Hilbert
                                                           functions</a>,&nbsp;
