--- a/Research.html
+++ b/Research.html
@@ -789,7 +789,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           Rossi, N.V.
                                                           Trung, G.
                                                           Valla,&nbsp; <a
-href="http://arxiv.org/pdf/0407398.pdf"> Castelnuovo-Mumford regularity and
+href="http://arxiv.org/pdf/math/0407398.pdf"> Castelnuovo-Mumford regularity and
                                                           finiteness of
                                                           Hilbert
                                                           functions</a>,&nbsp;
@@ -806,7 +806,7 @@ href="http://arxiv.org/pdf/0407398.pdf"> Castelnuovo-Mumford regularity and
 
                                                           Commutative
                                                           algebra,
-                                                          193--209,
+                                                          193-209,
                                                           Lect. Notes
                                                           Pure Appl.
                                                           Math., 244,
@@ -814,7 +814,8 @@ href="http://arxiv.org/pdf/0407398.pdf"> Castelnuovo-Mumford regularity and
                                                           Hall/CRC, Boca
                                                           Raton, FL,
                                                           2006.&nbsp;&nbsp;</span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></li>
-          <li><font size="-1"><span
+
+							  <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
