--- a/Research.html
+++ b/Research.html
@@ -848,38 +848,13 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           lang="EN-US"><font
                                                           size="-1"><span
 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                                          lang="EN-US">A.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                                                          lang="EN-US">A. 
                                                           Conca, E. De
                                                           Negri, A.V.
                                                           Jayanthan,
                                                           M.E.
                                                           Rossi,&nbsp; <a
-href="http://www.dima.unige.it/%7Econca/Articoli%20Conca%20PDF/PDF%20da%20rivista/%282005%29%20Conca%20DeNegri%20Jayanthan%20Rossi%20-%20Graded%20rings%20associated%20with%20contracted%20ideals.pdf">Graded
-
-
-
-
-
-
-
-
-
-
+href="http://arxiv.org/pdf/math/0403019.pdf"> Graded 
                                                           rings
                                                           associated
                                                           with
@@ -1035,7 +1010,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           C.&nbsp;
                                                           Polini, M.E.
                                                           Rossi,&nbsp; <a
-href="publications/JPARossi.pdf">Depth of associated graded rings via
+href="http://arxiv.org/pdf/math/0304111.pdf">Depth of associated graded rings via
                                                           Hilbert
                                                           coefficients
                                                           of ideals</a>,&nbsp;
