--- a/Research.html
+++ b/Research.html
@@ -853,7 +853,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           Negri, A.V.
                                                           Jayanthan,
                                                           M.E.
-                                                          Rossi,&nbsp; <a
+                                                          Rossi  <a
 href="http://arxiv.org/pdf/math/0403019.pdf"> Graded 
                                                           rings
                                                           associated
@@ -862,22 +862,10 @@ href="http://arxiv.org/pdf/math/0403019.pdf"> Graded
                                                           ideals</a>, J.
                                                           Algebra 284
                                                           (2005), no. 2,
-                                                          593--626.&nbsp;
+                                                          593-626.&nbsp; 
+</span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></li>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-                                                          </span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></li>
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
