--- a/Research.html
+++ b/Research.html
@@ -919,8 +919,8 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
 
                                                           Rossi, G.
-                                                          Valla,&nbsp; <a
-href="publications/JPARossi-Valla.pdf">The Hilbert function of the
+                                                          Valla,
+                                                          <a  >The Hilbert function of the
                                                           Ratliff-Rush
                                                           filtration</a>,&nbsp;
 
@@ -995,24 +995,14 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
 
                                                           Corso,
-                                                          C.&nbsp;
+                                                          C. 
                                                           Polini, M.E.
-                                                          Rossi,&nbsp; <a
-href="http://arxiv.org/pdf/math/0304111.pdf">Depth of associated graded rings via
+                                                          Rossi, <a
+href="http://arxiv.org/pdf/math/0304111.pdf"> Depth of associated graded rings via
                                                           Hilbert
                                                           coefficients
-                                                          of ideals</a>,&nbsp;
-
-
-
-
-
-
-
-
-
-
-
+                                                          of
+                                                          ideals</a>,   
                                                           J. Pure Appl.
                                                           Algebra 201
                                                           (2005), no.
@@ -1080,7 +1070,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           N.V.&nbsp;
                                                           Trung, G.
                                                           Valla,&nbsp; <a
-href="publications/RoVaTrFin.pdf">Castelnuovo-Mumford regularity and
+"http://arxiv.org/pdf/math/0211178.pdf">  Castelnuovo-Mumford regularity and
                                                           extended
                                                           degree</a>,&nbsp;
 
