--- a/Research.html
+++ b/Research.html
@@ -1069,21 +1069,10 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           Rossi,
                                                           N.V.&nbsp;
                                                           Trung, G.
-                                                          Valla,&nbsp; <a
+                                                          Valla, <a
 "http://arxiv.org/pdf/math/0211178.pdf">  Castelnuovo-Mumford regularity and
                                                           extended
-                                                          degree</a>,&nbsp;
-
-
-
-
-
-
-
-
-
-
-
+                                                          degree</a>, 
                                                           Trans. Amer.
                                                           Math. Soc. 355
                                                           (2003), no. 5,
