--- a/Research.html
+++ b/Research.html
@@ -1072,7 +1072,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           Valla, <a
 "http://arxiv.org/pdf/math/0211178.pdf">  Castelnuovo-Mumford regularity and
                                                           extended
-                                                          degree</a>, 
+                                                          degree></a>, 
                                                           Trans. Amer.
                                                           Math. Soc. 355
                                                           (2003), no. 5,
