--- a/Research.html
+++ b/Research.html
@@ -1067,12 +1067,12 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
 
                                                           Rossi,
-                                                          N.V.&nbsp;
+                                                          N.V. 
                                                           Trung, G.
                                                           Valla, <a
-"http://arxiv.org/pdf/math/0211178.pdf">  Castelnuovo-Mumford regularity and
+href="http://arxiv.org/pdf/math/0211178.pdf">  Castelnuovo-Mumford regularity and
                                                           extended
-                                                          degree></a>, 
+                                                          degree> </a>, 
                                                           Trans. Amer.
                                                           Math. Soc. 355
                                                           (2003), no. 5,
