--- a/Research.html
+++ b/Research.html
@@ -1072,7 +1072,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           Valla, <a
 href="http://arxiv.org/pdf/math/0211178.pdf">  Castelnuovo-Mumford regularity and
                                                           extended
-                                                          degree> </a>, 
+                                                          degree  </a>, 
                                                           Trans. Amer.
                                                           Math. Soc. 355
                                                           (2003), no. 5,
@@ -1139,9 +1139,9 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
 
                                                           Rossi, I.
-                                                          Swanson,&nbsp;
+                                                          Swanson 
                                                           <a
-href="Notes%20on%20the%20behavior%20of%20the%20Ratliff-Rush%20filtration">Notes
+href="http://arxiv.org/pdf/math/0209308.pdf">    Notes
 
 
 
