--- a/Research.html
+++ b/Research.html
@@ -1248,7 +1248,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           V.
                                                           Vasconcelos,&nbsp;
                                                           <a
-                                                          href="publications/Maximal.Hilb.Funct.pdf">Maximal
+                                                         >Maximal
 
 
 
