--- a/Research.html
+++ b/Research.html
@@ -1122,51 +1122,17 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           lang="EN-US"><font
                                                           size="-1"><span
 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                                          lang="EN-US">M.E.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                                                          lang="EN-US">M.E. 
                                                           Rossi, I.
                                                           Swanson 
                                                           <a
-href="http://arxiv.org/pdf/math/0209308.pdf">    Notes
-
-
-
-
-
-
-
-
-
-
+href="http://arxiv.org/pdf/math/0209308.pdf">    Notes 
                                                           on the
                                                           behavior of
                                                           the
                                                           Ratliff-Rush
                                                           filtration</a>,&nbsp;
-
-
-
-
-
-
-
-
-
-
+ 
 
                                                           Commutative
                                                           algebra
@@ -1247,21 +1213,9 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           and&nbsp; W.
                                                           V.
                                                           Vasconcelos,&nbsp;
-                                                          <a
-                                                         >Maximal
-
-
-
-
-
-
-
-
-
-
-
+                                                         <a>  Maximal 
                                                           Hilbert
-                                                          functions</a>,&nbsp;
+                                                          functions,</a>, 
 
 
 
