--- a/Research.html
+++ b/Research.html
@@ -1298,8 +1298,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
                                                           Conca, M.E.
                                                           Rossi and G.
-                                                          Valla, <a
-href="http://www.dima.unige.it/%7Econca/Articoli%20Conca%20PDF/PDF%20da%20rivista/%282001%29%20Conca%20Rossi%20Valla%20-%20Grobner%20Flags%20and%20Gorenstein%20algebras.pdf">Groebner
+                                                          Valla, <a>Groebner
 
 
 
@@ -1312,7 +1311,7 @@ href="http://www.dima.unige.it/%7Econca/Articoli%20Conca%20PDF/PDF%20da%20rivist
 
                                                           flags and
                                                           Gorenstein
-                                                          algebras</a>,&nbsp;
+                                                          algebras</a>, 
 
 
 
@@ -1402,10 +1401,9 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
                                                           Conca, E. De
                                                           Negri and M.E.
-                                                          Rossi,&nbsp; <a
-href="publications/rate.pdf">On the rate of a set of points in
+                                                          Rossi,&nbsp; <a>On the rate of a set of points in
                                                           projective
-                                                          space</a>,&nbsp;
+                                                          space</a>, 
 
 
 
@@ -1494,32 +1492,11 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
 
                                                           Rossi and G.
-                                                          Valla, <a
-                                                          href="publications/stretched3.tex.pdf">Stretched
-
-
-
-
-
-
-
-
-
-
-
+                                                          Valla, <a>Stretched
+ 
                                                           m-primary
-                                                          ideals</a>,&nbsp;
-
-
-
-
-
-
-
-
-
-
-
+                                                          ideals</a>, 
+ 
                                                           Beitraege zur
                                                           Algebra und
                                                           Geometrie 42
@@ -1600,10 +1577,9 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
 
 
-                                                          Rossi,&nbsp; <a
-href="publications/ReductionNumber.pdf">A bound on the reduction number
+                                                          Rossi,&nbsp; <a>A bound on the reduction number
                                                           of a primary
-                                                          ideal</a>,&nbsp;
+                                                          ideal</a>, 
 
 
 
@@ -1700,8 +1676,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
 
                                                           Rossi and G.
-                                                          Valla, <a
-                                                          href="publications/H3.TEX.pdf">Cohen-Macaulay
+                                                          Valla, <a>Cohen-Macaulay
 
 
 
@@ -1802,8 +1777,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
 
 
-                                                          Rossi, <a
-                                                          href="publications/Sallyestesa.tex.pdf">Primary
+                                                          Rossi, <a >Primary
 
 
 
@@ -1818,7 +1792,8 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           ideals with
                                                           good
                                                           associated
-                                                          graded rings</a>,&nbsp;
+                                                          graded
+                                                          rings</a>, 
 
 
 
@@ -1835,18 +1810,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           {\bf 145}
                                                           (2000), 75-90.</span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></li>
         </ul>
-        <font size="-1"><span
-            style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-            lang="EN-US">&nbsp;<br>
-            <b>Preprints: </b><br>
-            - S. Masuti, K. Ozeki, M.E. Rossi, H. L.Truong, On the
-            structure of the Sally module and the second normal Hilbert
-            coefficient,&nbsp; preprint 2018<br>
-            - J. Elias, M.E. Rossi,&nbsp; One dimensional Gorenstein
-            local rings, preprint 2018<br>
-            - J. Jelisiejew, S. Masuti,&nbsp; M.E. Rossi, On the Hilbert
-            function of Artinian local complete intersections, preprint
-            2018<br>
+       
           </span></font><font size="-1"><span
             style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
             lang="EN-US"><span style="font-size: 12.000000pt;
