--- a/Research.html
+++ b/Research.html
@@ -215,8 +215,8 @@
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                    lang="EN-US">M.E. Rossi, The dual module of
-                    Gorenstein k-algebras, </span></font></span></font><font
+                    lang="EN-US">M.E. Rossi, <a> The dual module of
+                    Gorenstein k-algebras </a>, </span></font></span></font><font
               size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
