--- a/Research.html
+++ b/Research.html
@@ -91,7 +91,8 @@
                   size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 	  lang="EN-US">  <a> Almost
-	  finitely generated inverse systems,</a>&nbsp;  Contemp. Math. (2024)
+	  finitely generated inverse systems,</a>&nbsp;  Contemp. Math.Vol. 805
+ISBNs: 978-1-4704-7356-3 (print); 978-1-4704-7665-6 (online) DOI: https://doi.org/10.1090/conm/805 (2024)
               </span></font> </span></font> </li> 
 
 	  
@@ -138,8 +139,7 @@
                   href="https://arxiv.org/pdf/2012.05530.pdf">Normal
 
                       Hilbert coefficients and elliptic ideals in normal
-                      2-dimensional local domains,</a>&nbsp; Nagoya
-	      Math. J. (2022), DOI 10.1017/nmj.2022.5
+                      2-dimensional local domains,</a>&nbsp; Nagoya Math. J., 248 (2022), 779–800, DOI 10.1017/nmj.2022.5
               </span></font> </span></font> </li>
 
 	      <li><font size="-1"><span
@@ -449,8 +449,8 @@ classes of Artinian local  rings via Macaulay's
                                         lang="EN-US"><font size="-1"><span
 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                             lang="EN-US">M.E.
-                                            Rossi,&nbsp; Hilbert
-                Functions&nbsp; of Cohen-Macaulay local rings,
+                                            Rossi,<a>Hilbert
+                Functions&nbsp; of Cohen-Macaulay local rings </a>
                                             "Commutative Algebra and its
                                             Connections to Geometry",
                                             Contemporary Mathematics
