--- a/Research.html
+++ b/Research.html
@@ -87,12 +87,9 @@
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                    lang="EN-US">J. Elias,&nbsp; M.E. Rossi </span></font><font
-                  size="-1"><span
-                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-	  lang="EN-US">  <a> Almost
+                    lang="EN-US">J. Elias,&nbsp; M.E. Rossi,   <a> Almost
 	  finitely generated inverse systems,</a>&nbsp;  Contemp. Math.Vol. 805
-ISBNs: 978-1-4704-7356-3 (print); 978-1-4704-7665-6 (online) DOI: https://doi.org/10.1090/conm/805 (2024)
+ISBNs: 978-1-4704-7356-3 (print); 978-1-4704-7665-6 (online) (2024)
               </span></font> </span></font> </li> 
 
 	  
