--- a/Research.html
+++ b/Research.html
@@ -213,29 +213,7 @@ ISBNs: 978-1-4704-7356-3 (print); 978-1-4704-7665-6 (online) (2024)
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                     lang="EN-US">M.E. Rossi, <a> The dual module of
-                    Gorenstein k-algebras </a>, </span></font></span></font><font
-              size="-1"><span
-                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"><font size="-1"><span
-                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                    lang="EN-US"><font size="-1"><span
-                        style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                        lang="EN-US"><font size="-1"><span
-                            style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                            lang="EN-US"><font size="-1"><span
-                                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                lang="EN-US"><font size="-1"><span
-                                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                    lang="EN-US"><font size="-1"><span
-                                        style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                        lang="EN-US"><font size="-1"><span
-style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                            lang="EN-US"><font size="-1"><span
-style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                                lang="EN-US"><font
-                                                  size="-1"><span
-                                                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                                    lang="EN-US">Proceedings
+                    Gorenstein k-algebras </a>,  Proceedings
 
 
 
@@ -539,9 +517,8 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           Proc. Amer.
                                                           Math. Soc. 138
                                                           (2010), 61-73.
-                                                          </span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></span></font></li>
-        </ul>
-        <ul>
+                                                           </span></font></li>
+       
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
@@ -558,11 +535,11 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                         style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                         lang="EN-US"><font size="-1"><span
 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                                            lang="EN-US">M.E.
-                                            Rossi,&nbsp;&nbsp; Hilbert
+                                            lang="EN-US"> M.E.
+                                            Rossi, <a> </a>  Hilbert
                                             function and free
                                             resolutions of filtered
-                                            modules, Proceedings 4th
+                                            modules, &nbsp; Proceedings 4th
                                             Japan-Vietnam Joint Seminar
                                             on Commutative Algebra,
                                             Meiji University, Institute
