--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta name="description" content="Simple Template #3 from
-      simpletemplates.org">
+    <meta name="description" content="Welcome to my Webpage">
     <meta name="keywords" content="simple #3, template,
       simpletemplates.org">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Simple Template #3 - simpletemplates.org</title>
+    <title>Welcome to my Webpage</title>
   </head>
   <body>
     <div id="wrap">
@@ -33,8 +32,8 @@
           <li><a
               href="Curriculum.html">Curriculum</a></li>
           <li><a href="Research.html">Research</a></li>
-          <li><a href="Teaching.html">Teaching</a></li>
-          <li><a href="#">Contact Us <br>
+       <--   <li><a href="Teaching.html">Teaching</a></li>
+          <li><a href="#">Contact Us <br> --!>
             </a>
             <ul>
               <li><br>
