--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <li><a
               href="Curriculum.html">Curriculum</a></li>
           <li><a href="Research.html">Research</a></li>
-       <--   <li><a href="Teaching.html">Teaching</a></li>
-          <li><a href="#">Contact Us <br> --!>
+       <!--   <li><a href="Teaching.html">Teaching</a></li>
+          <li><a href="#">Contact Us <br> -->
             </a>
             <ul>
               <li><br>
