--- a/Curriculum.html
+++ b/Curriculum.html
@@ -32,10 +32,10 @@
           <li><a
               href="Curriculum.html">Curriculum</a></li>
           <li><a href="Research.html">Research</a></li>
-          <li><a href="Teaching.html">Teaching</a></li>
+      <!--    <li><a href="Teaching.html">Teaching</a></li>
           <li><a href="#">Contact Us&nbsp; <br>
             </a>
-          </li>
+          </li> -->
         </ul>
       </div>
       <div id="content"><span style="font-size: 12.000000pt;
