--- a/Research.html
+++ b/Research.html
@@ -76,7 +76,8 @@
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                    lang="EN-US">J. Elias,&nbsp; M.E. Rossi,   <a> Almost
+                    lang="EN-US">J. Elias,&nbsp; M.E. Rossi,   <a 
+	  href="https://arxiv.org/pdf/2411.03058.pdf"> Almost
 	  finitely generated inverse systems,</a>&nbsp;  Contemp. Math.Vol. 805
 ISBNs: 978-1-4704-7356-3 (print); 978-1-4704-7665-6 (online) (2024)
               </span></font> </span></font> </li> 
