--- a/Research.html
+++ b/Research.html
@@ -48,6 +48,22 @@
             lang="EN-US"> </span></font>
 	<ul>
 
+ 
+	   <li><font size="-1"><span
+                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                lang="EN-US"><font size="-1"><span
+                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                    lang="EN-US">A. De Stefani, S. K. Masuti, M.E. Rossi, </span></font><font
+                  size="-1"><span
+                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                    lang="EN-US"> J. K. Verma,&nbsp; <a
+                  href="https://arxiv.org/pdf/2412.07546.pdf">
+                Hilbert-Kunz multiplicity of powers of ideals in
+                dimension two,
+            </a>&nbsp;  (preprint), 2024
+	  </span></font> </span></font> </li>
+
+
 	   <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
