--- a/Research.html
+++ b/Research.html
@@ -413,6 +413,9 @@ classes of Artinian local rings via Macaulay's
                                             4589–4604. </span></font></li>
 
 
+ 
+					    
+
 					    <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
@@ -430,7 +433,8 @@ classes of Artinian local rings via Macaulay's
                                         lang="EN-US"><font size="-1"><span
 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                             lang="EN-US">M.E.
-                                            Rossi,<a>Hilbert
+                                            Rossi,<a
+                href="Contemp.Rossi.Olinda.pdf"> Hilbert
                 Functions&nbsp; of Cohen-Macaulay local rings </a>
                                             "Commutative Algebra and its
                                             Connections to Geometry",
