--- a/Research.html
+++ b/Research.html
@@ -546,10 +546,11 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                         lang="EN-US"><font size="-1"><span
 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                             lang="EN-US"> M.E.
-                                            Rossi, <a> </a>  Hilbert
+                                            Rossi,<a
+                href="Lectures.Rossi.Japan-Vietnam.pdf">  Hilbert
                                             function and free
                                             resolutions of filtered
-                                            modules, &nbsp; Proceedings 4th
+                                            modules, </a>   &nbsp; Proceedings 4th
                                             Japan-Vietnam Joint Seminar
                                             on Commutative Algebra,
                                             Meiji University, Institute
