--- a/Research.html
+++ b/Research.html
@@ -905,9 +905,9 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
                                                           Rossi, G.
                                                           Valla,
-                                                          <a  >The Hilbert function of the
+                                                          <a  href="RRFiltration.pdf" >The Hilbert function of the
                                                           Ratliff-Rush
-                                                          filtration</a>,&nbsp;
+                                                          filtration </a>,&nbsp;
 
 
 
