--- a/Research.html
+++ b/Research.html
@@ -1198,9 +1198,9 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           and&nbsp; W.
                                                           V.
                                                           Vasconcelos,&nbsp;
-                                                         <a>  Maximal 
+                                                         <a  href="MaxHilb.F.pdf" >  Maximal 
                                                           Hilbert
-                                                          functions,</a>, 
+                                                          functions,</a> 
 
 
 
@@ -1562,7 +1562,10 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
 
 
-                                                          Rossi,&nbsp; <a>A bound on the reduction number
+                                                          Rossi,&nbsp;
+                                                          <a
+                                                          href="Onthereductionnumber.pdf">
+                                                          A bound on the reduction number
                                                           of a primary
                                                           ideal</a>, 
 
