--- a/Research.html
+++ b/Research.html
@@ -1283,18 +1283,9 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
                                                           Conca, M.E.
                                                           Rossi and G.
-                                                          Valla, <a>Groebner
+                                                          Valla, <a href="Groebner Flags (CRV).pdf">Groebner
 
-
-
-
-
-
-
-
-
-
-                                                          flags and
+  flags and
                                                           Gorenstein
                                                           algebras</a>, 
 
@@ -1386,7 +1377,13 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
                                                           Conca, E. De
                                                           Negri and M.E.
-                                                          Rossi,&nbsp; <a>On the rate of a set of points in
+                                                          Rossi,&nbsp;
+                                                          <a href="The
+                                                          rate of
+                                                          points in
+                                                          projective
+                                                          spaces.pdf">
+                                                          On the rate of a set of points in
                                                           projective
                                                           space</a>, 
 
