--- a/Research.html
+++ b/Research.html
@@ -1378,11 +1378,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                                                           Conca, E. De
                                                           Negri and M.E.
                                                           Rossi,&nbsp;
-                                                          <a href="The
-                                                          rate of
-                                                          points in
-                                                          projective
-                                                          spaces.pdf">
+                                                          <a  href="The rate of points in projective spaces.pdf">
                                                           On the rate of a set of points in
                                                           projective
                                                           space</a>, 
