--- a/Research.html
+++ b/Research.html
@@ -1470,7 +1470,8 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
 
                                                           Rossi and G.
-                                                          Valla, <a>Stretched
+                                                          Valla, <a
+                                                          href="stretched3.pdf" >Stretched
  
                                                           m-primary
                                                           ideals</a>, 
@@ -1657,7 +1658,9 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
 
                                                           Rossi and G.
-                                                          Valla, <a>Cohen-Macaulay
+                                                          Valla, <a
+                                                          href="H+d-3.pdf"
+                                                           >Cohen-Macaulay
 
 
 
