--- a/Research.html
+++ b/Research.html
@@ -218,8 +218,8 @@ ISBNs: 978-1-4704-7356-3 (print); 978-1-4704-7665-6 (online) (2024)
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                    lang="EN-US">M.E. Rossi, <a> The dual module of
-                    Gorenstein k-algebras </a>,  Proceedings
+                    lang="EN-US">M.E. Rossi, <a href="Giappone.Novembre2016.pdf"> The dual module of
+                    Gorenstein k-algebras (slides) </a>,  Proceedings
 
 
 
