--- a/Research.html
+++ b/Research.html
@@ -80,7 +80,7 @@
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                    lang="EN-US">E. De Negri, &nbsp; A. De Stefani </span></font><font
+                    lang="EN-US">E. De Negri, &nbsp; A. De Stefani,  </span></font><font
                   size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 	  lang="EN-US"> M.E. Rossi,&nbsp; <a
