--- a/Research.html
+++ b/Research.html
@@ -153,7 +153,8 @@ ISBNs: 978-1-4704-7356-3 (print); 978-1-4704-7665-6 (online) (2024)
                     Rossi, Maria Evelina; <a
                       href="https://arxiv.org/pdf/1711.06868.pdf">A
                       filtration of the Sally module and the first
-                      normal Hilbert coefficient</a>,  J. Algebra 571 (2021), 376-392, in honor of C. Huneke. <br>
+                      normal Hilbert coefficient</a>,  J. Algebra 571
+                (2021), 376-392, in honor of Prof. C. Huneke. <br>
 	      </span></font></span></font></li>
 
 	      
@@ -189,7 +190,7 @@ ISBNs: 978-1-4704-7356-3 (print); 978-1-4704-7665-6 (online) (2024)
                  	href="https://arxiv.org/pdf/1705.05686.pdf">The
                   structure of the inverse system of Gorenstein
                   k-algebras</a> Adv. Math. 314 (2017),
-                306-327
+                306-327 in honor of Prof. Giuseppe Valla
 		</span></font></li>
 
 		
