--- a/index.html
+++ b/index.html
@@ -150,9 +150,11 @@ href="https://arxiv.org/find/all/1/all:+AND+Rossi+AND+Maria+Evelina/0/1/0/all/0/
                 class="Apple-converted-space">&nbsp;</span><a
 href="http://ams.mpim-bonn.mpg.de/mathscinet/search/publications.html?pg1=INDI&amp;s1=150830">Mathscinet</a>.</font></li>
           <li><a href="http://www.commalg.org/"><font face="Arial"
-                size="-1">The Commutative Algebra community. </font></a></li>
+                size="-1">The Commutative Algebra
+community. </font></a></li>
+
 <li><a href="https://sites.google.com/view/conferencemer/"><font face="Arial"
-                size="-1"> M&R Conference, June 16-20, 2025 The Commutative Algebra community.</font></a></li>
+                size="-1"> M&R Conference, June 16-20, 2025.</font></a></li>
         </ul>
       </div>
       <div id="footer">
