--- a/Research.html
+++ b/Research.html
@@ -60,7 +60,8 @@
                   href="https://arxiv.org/pdf/2412.07546.pdf">
                 Hilbert-Kunz multiplicity of powers of ideals in
                 dimension two,
-            </a>&nbsp;  (preprint), 2024
+            </a>&nbsp;   will appear in Bulletin of the London
+                Mathematical Society,  2024
 	  </span></font> </span></font> </li>
 
 
@@ -85,7 +86,8 @@
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 	  lang="EN-US"> M.E. Rossi,&nbsp; <a
                   href="https://arxiv.org/pdf/2304.14842.pdf"> On the rate
-          of generic Gorenstein k-algebras,</a>&nbsp;  (preprint), 2023
+          of generic Gorenstein k-algebras,</a>&nbsp;   will appear in
+                Math. Z, 2023
 	  </span></font> </span></font> </li>
 
 	   <li><font size="-1"><span
